--- a/about.html
+++ b/about.html
@@ -12,10 +12,12 @@ sections:
     image: assets/images/programs/leadership_team_2.jpg
     path: /about/history
   - title: Accomplishments
+    head:  YEPs Achievements
     desc: For close to a decade, YEP has hosted numerous Guest Speakers, Networking events, Career Development workshops, New-comers Workshop and more.
     image: assets/images/programs/Empower_award.jpg
     path: /about/accomplishments
-  - title: Team
+  - title: YEP Team
+    head: Team Members
     desc: Meet the members of the YEP team and learn more about their journey to join this mission-driven organization and the role they play.
     image: assets/images/programs/team_pic.jpg
     path: /about/team
