--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@ sections:
     desc: YEP was founded in 2010 by three individuals who recognized the lack of effective networking platforms for the diverse Ethiopian professionals in the Washington Metropolitan area.
     image: assets/images/programs/leadership_team_2.jpg
     path: /about/history
-  - title: Accomplishments
-    head:  YEPs Achievements
+  - title: YEPs Achievements
+    head: Accomplishments 
     desc: For close to a decade, YEP has hosted numerous Guest Speakers, Networking events, Career Development workshops, New-comers Workshop and more.
     image: assets/images/programs/Empower_award.jpg
     path: /about/accomplishments
-  - title: YEP Team
+  - title: YEPs Team
     head: Team Members
     desc: Meet the members of the YEP team and learn more about their journey to join this mission-driven organization and the role they play.
     image: assets/images/programs/team_pic.jpg
