--- a/_pages/team.html
+++ b/_pages/team.html
@@ -6,8 +6,7 @@ permalink: /about/team/
 body_class: team
 ---
 <h1>Our Team</h1>
-
-<p>Meet the team that volunteer their time, expertise, and passion to build a thriving community.</p>
+<p>Meet the core team that volunteer their time, expertise, and passion to build a thriving community.</p>
 <div class="row card-grid">
   {% assign persons = site.data.team %}
   {% for person in persons %}
@@ -28,9 +27,7 @@ body_class: team
   </div>
   {% endfor %}
 </div>
-
-<h2>Former Team Members</h2>
-
+<h2>Volunteers</h2>
 <div class="row card-grid">
   {% assign persons = site.data.past-team-members %}
   {% for person in persons %}
