--- a/programs.html
+++ b/programs.html
@@ -14,8 +14,8 @@ body_class: program
   </div>
 </section>-->
 <div class="overview">
-  <div class="col-sm-12 text-left margin-bottom-4">
-    <h1 class="">Our Programs</h1>
+  <div class="col-sm-12">
+    <h1 class="margin-top-0 margin-bottom-2"> Our Programs</h1>
   </div>
   <section class="sub-navigation">
     <div class="container">
