--- a/programs.html
+++ b/programs.html
@@ -11,6 +11,7 @@ body_class: program
     <div class="row">
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2"> Our Programs</h1>
+        </div>
         <div class="container">
         <p class="intro"> Take advantage of or refer someone to unique initiatives that offer free resources to professionals looking to learn, grown, and soar new heights. </p>
       </div>
