--- a/programs.html
+++ b/programs.html
@@ -18,6 +18,7 @@ body_class: program
      </div>
     </div>
   </div>
+<div class="overview">
   <section class="sub-navigation">
     <div class="container">
       <div class="row">
