--- a/events.html
+++ b/events.html
@@ -12,8 +12,8 @@ body_class: events
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2">Events</h1>
       </div>
-      <div class="container">
-        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
+      <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
+        class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
   <li> <i>YEP Guest Speaker Series </i> - featuring an expert, leader, or influencer </li>
   <li> <i>Career Series </i> - tips and resources for success in the workplace or in business </li>
@@ -26,7 +26,6 @@ body_class: events
     </div>
   </div>
 </div>
-
 
 {% capture nowunix %}{{'now' | date: '%s'}}{% endcapture %}
 
