--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@ body_class: events
         <h1 class="margin-top-0 margin-bottom-2">Events</h1>
       </div>
       <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
-        class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
+        YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
   <li> <i>YEP Guest Speaker Series </i> - featuring an expert, leader, or influencer </li>
   <li> <i>Career Series </i> - tips and resources for success in the workplace or in business </li>
