--- a/events.html
+++ b/events.html
@@ -11,7 +11,8 @@ body_class: events
     <div class="row">
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2">Events</h1>
-      div class="container">
+       </div>
+      <div class="container">
        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
   <li> <i>YEP Guest Speaker Series </i> - featuring an expert, leader, or influencer </li>
