--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -7,21 +7,10 @@ body_class: about
 ---
 <h1>Vision & Mission </h1>
 
-<p class="intro">
-"When spider webs unite, they can tie up a lion" - Ethiopian Proverb
-</p>
-
+<p class="intro"> "When spider webs unite, they can tie up a lion" - Ethiopian Proverb </p>
 <img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpg" />
-
 <h2>Our Vision</h2>
-
-<p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
-The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.
-</p>
-
+<p class="intro"> The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.</p>
 <h2>Our Mission</h2>
-
-<p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
-To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
-</p>
+<p class="intro"> To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
 
