--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -9,10 +9,10 @@ body_class: about
 <p class="intro"> YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.</p>
 <p class="intro"> Here’s a snapshot: </p>
 <ul>
-  <li><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> Feature inspirational speakers to educate and empower young professionals.</li>
-  <li><b>Career Workshops:</b>Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
-  <li><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college.</li>
-  <li><b>Supporting Newcomers:</b> Assist newcomers to the United States in their pursuit of education and career success. </li>
-  <li><b>Networking:</b> Create opportunities for professionals to meet and share resources. </li>
-  <li><b>Annual Fundraising Gala:</b> Host 300+ professionals to raise funds in support of future programs. </li>
+  <li class="intro"><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> Feature inspirational speakers to educate and empower young professionals.</li>
+  <li class="intro"><b>Career Workshops:</b>Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
+  <li class="intro"><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college.</li>
+  <li class="intro"><b>Supporting Newcomers:</b> Assist newcomers to the United States in their pursuit of education and career success. </li>
+  <li class="intro"><b>Networking:</b> Create opportunities for professionals to meet and share resources. </li>
+  <li class="intro"><b>Annual Fundraising Gala:</b> Host 300+ professionals to raise funds in support of future programs. </li>
 </ul>
