--- a/_pages/history.html
+++ b/_pages/history.html
@@ -8,7 +8,7 @@ body_class: about
 <h1 class="margin-top-4">Our Story</h1>
 <p class="intro"> Your Ethiopian Professionals (YEP) founders Mesfin Getaneh and Shimeles Mekonnen saw the incredible power of networking and community through the various events they attended. They were inspired by the abundance of connections and opportunities and sought a similar platform for fellow Ethiopian professionals. However, what they found were organizations designed for specific trades or interests. There remained a lack of a broad platform for young Ethiopians across all professions to connect, share experiences, learn from one another, and pursue community development initiatives. </p>
 <div class="row text-center padding-top-2 padding-bottom-2">
-  <img src="/assets/images/programs/leadership_team_2.jpg">
+  <img src="/assets/images/programs/shim_mesfin.jpeg">
 </div>
 <p class="intro"> Inspired to fulfill this need, the pair began working to establish a foundation for what is now YEP in November 2010. During the early stages of planning, Lulit Tesfaye joined them, bringing firsthand experience in grassroots organizational development. </p>
 <div class="row text-center padding-top-2 padding-bottom-2">
