--- a/_pages/history.html
+++ b/_pages/history.html
@@ -16,5 +16,5 @@ body_class: about
 </div>
 <p class="intro"> YEP began by featuring inspirational speakers, hosting educational sessions, and providing networking opportunities. Today, YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community in the Washington Metropolitan area. As YEP grows, it continues to update its benefits and offerings to support members in the best ways possible. </p>
 <div class="row text-center padding-top-2 padding-bottom-2">
-  <img src="/assets/images/programs/leadership_team_2.jpg">
+  <img src="/assets/images/programs/history.JPG">
 </div>
