--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -8,7 +8,7 @@ body_class: about
 <h1>Vision & Mission </h1>
 
 <p class="intro"> "When spider webs unite, they can tie up a lion" - Ethiopian Proverb </p>
-<img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpg" />
+<img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpeg" />
 <h2>Our Vision</h2>
 <p class="intro"> The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.</p>
 <h2>Our Mission</h2>
