--- a/_pages/team.html
+++ b/_pages/team.html
@@ -6,7 +6,7 @@ permalink: /about/team/
 body_class: team
 ---
 <h1>Our Team</h1>
-<p>Meet the core team that volunteer their time, expertise, and passion to build a thriving community.</p>
+<p class="intro"> Meet the core team that volunteer their time, expertise, and passion to build a thriving community.</p>
 <div class="row card-grid">
   {% assign persons = site.data.team %}
   {% for person in persons %}
