--- a/_programs/recent-arrival.html
+++ b/_programs/recent-arrival.html
@@ -7,24 +7,10 @@ description: Offer sustainable resettlement programs and mobilize community lead
 order: 5
 body_class: program
 ---
-          <div class="row">
-               <div class="col-sm-7 col-md-7">
-<p>Your Ethiopian Professional’s recent arrivals Program focuses on helping those we serve learn and thrive in their new communities. This Newcomer Program initiative attempts to offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents.
-</p>
-
+    <div class="row">
+       <div class="col-sm-7 col-md-7">
+          <p class="intro"> Your Ethiopian Professional’s recent arrivals Program focuses on helping those we serve learn and thrive in their new communities. This Newcomer Program initiative attempts to offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents.
+         </p>
     </div>
-       <div class="col-sm-5 col-md-4 col-md-offset-1">
-         <aside class="sidebar">
-   <div class="well">
-    <h2>YEP Programs </h2>
-      <li><a href="https://yepnetwork.github.io/programs/a_career-development.html">Career Development</a></li>
-      <li><a href="https://yepnetwork.github.io/programs/b_personal-professional-empowerment.html">Personal and Professional Empowerment</a> </li>
-      <li><a href="https://yepnetwork.github.io/programs/c_professional-mentorship.html">Mentorship </a></li>
-      <li><a href="https://yepnetwork.github.io/programs/d_diaspora-community-engagement.html">Diaspora and Community Engagement</a>
-      <li><a href="https://yepnetwork.github.io/programs/e_recent-arrival.html">Recent Arrivals</a></li>
-      </li>
- </p>
-      </div>
-          </aside>
-            </div>
-            </div><!-- /.row -->
+   </div>
+      
