--- a/events.html
+++ b/events.html
@@ -15,7 +15,7 @@ body_class: events
       <div class="container">
        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
-  <li> <i>YEP Guest Speaker Series </i> - featuring an expert, leader, or influencer </li>
+  <li> <b>YEP Guest Speaker Series </b> - featuring an expert, leader, or influencer </li>
   <li> <i>Career Series </i> - tips and resources for success in the workplace or in business </li>
   <li> <i>Personal Development </i> - soft skills for a better quality of life </li>
   <li> <i>Diaspora Engagement </i> - panels that delve into specific issues and topics </li>
