--- a/events.html
+++ b/events.html
@@ -15,20 +15,19 @@ body_class: events
       <div class="container">
        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
-  <li> <b>YEP Guest Speaker Series </b> - featuring an expert, leader, or influencer </li>
-  <li> <i>Career Series </i> - tips and resources for success in the workplace or in business </li>
-  <li> <i>Personal Development </i> - soft skills for a better quality of life </li>
-  <li> <i>Diaspora Engagement </i> - panels that delve into specific issues and topics </li>
-  <li> <i>Newcomer workshops </i> - for recent immigrants settling into new lives </li>
-  <li> <i>Social activities </i> - happy hours and outdoor activities</li>
+  <li> <b>Speaker Series: </b> featuring an expert, leader, or influencer </li>
+  <li> <b>Career Series: </b> tips and resources for success in the workplace or in business </li>
+  <li> <b>Personal Development: </b> soft skills for a better quality of life </li>
+  <li> <b>Diaspora Engagement: </b> panels that delve into specific issues and topics </li>
+  <li> <b>Newcomer workshops: </b> for recent immigrants settling into new lives </li>
+  <li> <b>Social activities: </b> happy hours and outdoor activities</li>
+  <li> <b>Annual Gala: </b> host 300+ professionals to raise funds in support of future programs</li>
   </ul>
       </div>
     </div>
   </div>
 </div>
-
 {% capture nowunix %}{{'now' | date: '%s'}}{% endcapture %}
-
 <div class="overview">
   <section class="sub-navigation">
     <div class="container">
