--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body_class: front
   <div class="container" style="padding-top: 10px; padding-bottom: 10px;">
     <div class="row">
       <div class="col-md-12">
-       <h2 class="h1">Sign Up</h2>
+       <h2 class="h1">Get the latest events and activities</h2>
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
           <form action="https://yepnetworks.us11.list-manage.com/subscribe/post?u=5d936b18dafd103ed356a89c6&amp;id=620021804a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-horizontal hs-form" target="_blank" novalidate>
@@ -69,7 +69,7 @@ body_class: front
                 <div class="clear"></div>
 
                 <div class="" style="padding-left: 30px;width:93%">
-                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="hs-button primary large">
+                  <input type="submit" value="Sign Me Up" name="subscribe" id="mc-embedded-subscribe" class="hs-button primary large">
                 </div>
               </div>
             </div>
