--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ sections:
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <figure class="flex-video widescreen">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/r6eMugcQuH8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <img src="yepnetwork.github.io/assets/images/hero/target_audience.jpg">
           </figure>
         </div>
         <div class="col-sm-12 col-md-6">
