--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -5,12 +5,13 @@ header: Mission
 permalink: /about/mission/
 body_class: about
 ---
-<h1>Vision & Mission </h1>
-
+<h1>Mission & Vision </h1>
 <p class="intro"> "When spider webs unite, they can tie up a lion" - Ethiopian Proverb </p>
-<img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpeg" />
-<h2>Our Vision</h2>
-<p class="intro"> The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.</p>
+<img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpeg">
 <h2>Our Mission</h2>
 <p class="intro"> To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+<h2>Our Vision</h2>
+<p class="intro"> The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.</p>
+<img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpeg">
+
 
