--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -8,10 +8,10 @@ body_class: about
 <h1>Mission & Vision </h1>
 <p class="intro"> "When spider webs unite, they can tie up a lion" - Ethiopian Proverb </p>
 <img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpeg">
-<h2>Our Mission</h2>
+<h1>Our Mission</h1>
 <p class="intro"> To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
-<h2>Our Vision</h2>
+<h1>Our Vision</h1>
 <p class="intro"> The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.</p>
-<img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpeg">
+<img title="Vision & Mission " alt="" src="/assets/images/misc/yep_headquarter.jpg">
 
 
