--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -1,7 +1,7 @@
 ---
 layout: about
 title: Mission & Vision
-header: Mission
+header: Mission & Vision
 permalink: /about/mission/
 body_class: about
 ---
