--- a/_pages/history.html
+++ b/_pages/history.html
@@ -6,7 +6,7 @@ permalink: /about/history/
 body_class: about
 ---
 <div "class">
-<h1 class="margin-top-4">Our Story</h1>
+<h1>Our Story</h1>
 </div>
 <p class="intro"> Your Ethiopian Professionals (YEP) founders Mesfin Getaneh and Shimeles Mekonnen saw the incredible power of networking and community through the various events they attended. They were inspired by the abundance of connections and opportunities and sought a similar platform for fellow Ethiopian professionals. However, what they found were organizations designed for specific trades or interests. There remained a lack of a broad platform for young Ethiopians across all professions to connect, share experiences, learn from one another, and pursue community development initiatives. </p>
  <div class="row text-center padding-top-2 padding-bottom-2">
