--- a/_pages/history.html
+++ b/_pages/history.html
@@ -3,7 +3,7 @@ layout: about
 title: History
 header: Our History
 permalink: /about/history/
-body_class: about
+body_class: history
 ---
 <div class="container">
   <div class="row">
