--- a/_pages/history.html
+++ b/_pages/history.html
@@ -3,7 +3,7 @@ layout: about
 title: History
 header: Our History
 permalink: /about/history/
-body_class: default
+body_class: about
 ---
 <h1> Our Story </h1>
 <p class="intro"> Your Ethiopian Professionals (YEP) founders Mesfin Getaneh and Shimeles Mekonnen saw the incredible power of networking and community through the various events they attended. They were inspired by the abundance of connections and opportunities and sought a similar platform for fellow Ethiopian professionals. However, what they found were organizations designed for specific trades or interests. There remained a lack of a broad platform for young Ethiopians across all professions to connect, share experiences, learn from one another, and pursue community development initiatives. </p>
