--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -10,7 +10,8 @@ body_class: about
 <p class="intro"> Here’s a snapshot: </p>
 <ul>
   <li class="intro"><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> Feature inspirational speakers to educate and empower young professionals.</li>
-  <li class="intro"><b>Career Workshops:</b>Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
+ <p> <img src="/assets/images/yep_speakers.jpg"> </p>
+  <li class="intro"><b>Career Workshops:</b> Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
   <li class="intro"><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college.</li>
   <li class="intro"><b>Supporting Newcomers:</b> Assist newcomers to the United States in their pursuit of education and career success. </li>
   <li class="intro"><b>Networking:</b> Create opportunities for professionals to meet and share resources. </li>
