--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ sections:
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6">
-            <img src="yepnetwork.github.io/assets/images/hero/target_audience.jpg">
+            <img src="/assets/images/hero/target_audience.jpg">
         </div>
         <div class="col-sm-12 col-md-6">
           <h2 style="margin-top: 0">Who We Are</h2>
