--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ sections:
   </div>
 </div>
 <div class="container">
-  <section class="page-head">
+  <section class="prose bg-white">
     <div class="container">
       <div class="col-sm-12 col-md-6">
           <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 1.5em;">
