--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ sections:
 </div>
 <div class="container">
   <section class="prose bg-white">
-    <div class="container">
+    <div class="row">
       <div class="col-sm-12 col-md-6">
           <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 1.5em;">
            YEP members are a diverse community of professionals who represent an array of cultures, careers, experiences, and demographics. YEP has equal number of women and men members and serves professionals, students, recent arrivals, entrepreneurs, and the general Ethiopian community who strive for growth, excellence and success.
