--- a/_pages/history.html
+++ b/_pages/history.html
@@ -6,10 +6,12 @@ permalink: /about/history/
 body_class: about
 ---
 <h1> Our Story </h1>
-<p class="intro"> Your Ethiopian Professionals (YEP) founders Mesfin Getaneh and Shimeles Mekonnen saw the incredible power of networking and community through the various events they attended. They were inspired by the abundance of connections and opportunities and sought a similar platform for fellow Ethiopian professionals. However, what they found were organizations designed for specific trades or interests. There remained a lack of a broad platform for young Ethiopians across all professions to connect, share experiences, learn from one another, and pursue community development initiatives. </p>
+<p class="intro"> Your Ethiopian Professionals (YEP) founders Mesfin Getaneh and Shimeles Mekonnen saw the incredible power of networking and community through the various events they attended. They were inspired by the abundance of connections and opportunities and sought a similar platform for fellow Ethiopian professionals. However, what they found were organizations designed for specific trades or interests. There remained a lack of a broad platform for young Ethiopians across all professions to connect, share experiences, learn from one another, and pursue community development initiatives.Inspired to fulfill this need, the pair began working to establish a foundation for what is now YEP in November 2010. </p>
 <p> <img src="/assets/images/programs/shim_mesfin.jpeg"> </p>
-<p class="intro"> Inspired to fulfill this need, the pair began working to establish a foundation for what is now YEP in November 2010. During the early stages of planning, Lulit Tesfaye joined them, bringing firsthand experience in grassroots organizational development.</p>
+<p class="intro"> During the early stages of planning, Lulit Tesfaye joined them, bringing firsthand experience in grassroots organizational development. YEP began by featuring inspirational speakers, hosting educational sessions, and providing networking opportunities.</p>
 <p> <img src="/assets/images/programs/leadership_team_2.jpg"> </p>
-<p class="intro"> YEP began by featuring inspirational speakers, hosting educational sessions, and providing networking opportunities. Today, YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community in the Washington Metropolitan area. As YEP grows, it continues to update its benefits and offerings to support members in the best ways possible. </p>
+<p class="intro"> To date, YEP has more than 20 team members and dedicated volunteers and contributed more than 10,000 hours to support YEP’s mission. </p>
+ <p> <img src="/assets/images/programs/leadership_team_3.JPG"> </p>  
+  <p class="intro"> YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community in the Washington Metropolitan area. As YEP grows, it continues to update its benefits and offerings to support members in the best ways possible. </p>
 <p> <img src="/assets/images/programs/history_2.jpeg"></p>
    
