--- a/events.html
+++ b/events.html
@@ -15,7 +15,7 @@ body_class: events
       <div class="container">
        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
-  <li> <b>Speaker Series: </b> class="intro"><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> featuring an expert, leader, or influencer</li>
+  <li> <b>Speaker Series: </b> <class="intro"><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> featuring an expert, leader, or influencer</li>
  <p> <img src="/assets/images/yep_speakers.jpg"> </p>
   <li> <b>Career Series: </b> tips and resources for success in the workplace or in business </li>
   <li> <b>Personal Development: </b> soft skills for a better quality of life </li>
