--- a/events.html
+++ b/events.html
@@ -16,7 +16,6 @@ body_class: events
        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
   <ul>
   <li> <b>Speaker Series: </b> <class="intro"><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> featuring an expert, leader, or influencer</li>
- <p> <img src="/assets/images/yep_speakers.jpg"> </p>
   <li> <b>Career Series: </b> tips and resources for success in the workplace or in business </li>
   <li> <b>Personal Development: </b> soft skills for a better quality of life </li>
   <li> <b>Diaspora Engagement: </b> panels that delve into specific issues and topics </li>
@@ -24,6 +23,7 @@ body_class: events
   <li> <b>Social activities: </b> happy hours and outdoor activities</li>
   <li> <b>Annual Gala: </b> host 300+ professionals to raise funds in support of future programs</li>
   </ul>
+    <p class="intro"> Here is upcoming and past events below.</p>
       </div>
     </div>
   </div>
