--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -5,15 +5,20 @@ header: Accomplishments
 permalink: /about/accomplishments/
 body_class: about
 ---
-<h1 class="margin-top-4">Accomplishments</h1>
+          <div class="row margin-top-2">
+            <div class="col-sm-12">
+             <h1 class="margin-top-4">Accomplishments</h1>
 <p class="intro"> YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.</p>
 <p class="intro"> Here’s a snapshot: </p>
-<ul>
-  <li class="intro"><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> Feature inspirational speakers to educate and empower young professionals.</li>
- <p> <img src="/assets/images/yep_speakers.jpg"> </p>
-  <li class="intro"><b>Career Workshops:</b> Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
-  <li class="intro"><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college.</li>
-  <li class="intro"><b>Supporting Newcomers:</b> Assist newcomers to the United States in their pursuit of education and career success. </li>
-  <li class="intro"><b>Networking:</b> Create opportunities for professionals to meet and share resources. </li>
-  <li class="intro"><b>Annual Fundraising Gala:</b> Host 300+ professionals to raise funds in support of future programs. </li>
-</ul>
+            </div>
+            <div class="col-sm-5 col-md-5">
+               <div class="well">
+                <p> <img src="/assets/images/accomplishment.png"> </p>
+              </div>
+          </div>
+          </div>
+            <div class="col-sm-5 col-md-5">
+               <div class="well">
+                <p> <img src="/assets/images/accomplishments.png"> </p>
+              </div>
+          </div>
