--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -10,15 +10,17 @@ body_class: about
              <h1 class="margin-top-4">Accomplishments</h1>
 <p class="intro"> YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.</p>
 <p class="intro"> Here’s a snapshot: </p>
-            </div>
-            <div class="col-sm-10 col-md-10">
-               <div class="well">
-                <p> <img src="/assets/images/accomplishment.png"> </p>
-              </div>
-          </div>
-          </div>
-            <div class="col-sm-5 col-md-5">
-               <div class="well">
-                <p> <img src="/assets/images/accomplishments.png"> </p>
-              </div>
-          </div>
+          <div class="container">
+           <section class="prose bg-white">
+          <div class="row">
+                    <div class="col-sm-12 col-md-6">
+          <img src="/assets/images/accomplishment.png">
+                     </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <img src="/assets/images/accomplishments.png">
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
