--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -18,7 +18,7 @@ body_class: about
                      </div>
       <div class="row">
         <div class="col-sm-12 col-md-6">
-            <img src="/assets/images/accomplishments.png">
+            <img src="/assets/images/accomplishments.jpg">
         </div>
       </div>
     </div>
