--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -3,7 +3,7 @@ layout: about
 title: Accomplishments
 header: Accomplishments
 permalink: /about/accomplishments/
-body_class: about
+body_class: default
 ---
           <div class="row margin-top-2">
             <div class="col-sm-12">
@@ -14,11 +14,11 @@ body_class: about
            <section class="prose bg-white">
           <div class="row">
                     <div class="col-sm-12 col-md-6">
-          <img src="/assets/images/accomplishment.png">
+          <img src="/assets/images/accomplishments.png">
                      </div>
       <div class="row">
         <div class="col-sm-12 col-md-6">
-            <img src="/assets/images/accomplishments.jpg">
+            <img src="/assets/images/accomplishment.jpg">
         </div>
       </div>
     </div>
