--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -5,22 +5,31 @@ header: Accomplishments
 permalink: /about/accomplishments/
 body_class: default
 ---
-          <div class="row margin-top-2">
-            <div class="col-sm-12">
-             <h1 class="margin-top-4">Accomplishments</h1>
-<p class="intro"> YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.</p>
-<p class="intro"> Here’s a snapshot: </p>
-          <div class="container">
-           <section class="prose bg-white">
-          <div class="row">
-                    <div class="col-sm-12 col-md-6">
+         <div class="prose bg-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="margin-top-0 margin-bottom-2">About</h1>
+        <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 1.5em;">
+           YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.
+        </p>
+         <p class="intro"> Here’s a snapshot: </p>
+      </div>
+    </div>
+  </div>
+</div> 
+<div class="container">
+  <section class="prose bg-white">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
           <img src="/assets/images/accomplishments.png">
-                     </div>
+        </div>
       <div class="row">
         <div class="col-sm-12 col-md-6">
-            <img src="/assets/images/accomplishment.jpg">
+             <img src="/assets/images/accomplishment.jpg">
         </div>
       </div>
     </div>
   </section>
 </div>
+ 
