--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -3,7 +3,7 @@ layout: about
 title: Accomplishments
 header: Accomplishments
 permalink: /about/accomplishments/
-body_class: team
+body_class: about
 ---
          <div class="prose bg-white">
            <div class="container">
