--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ sections:
         </div>
       <div class="row">
         <div class="col-sm-12 col-md-6">
-            <img src="/assets/images/hero/target_audience.jpg">
+            <img src="/assets/images/hero/target_audience.png">
         </div>
       </div>
     </div>
