--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -12,7 +12,7 @@ body_class: diaspora
         <h1 class="margin-top-0 margin-bottom-2">Diaspora Corner</h1>
       </div>
       <div class="container">
-       <p class="intro"> Diaspora Corner is a blog where we highlight the accomplishments and perspectives of outstanding individuals in the diaspora. </p>  <p class="intro"> Read their stories and get your dose of inspiration. </p>
+       <p class="intro"> Diaspora Corner is a blog where we highlight the accomplishments and perspectives of movers and shakers of the the diaspora. </p>  <p class="intro"> Read their stories and get your dose of inspiration. </p>
       </div>
     </div>
   </div>
