--- a/_pages/team.html
+++ b/_pages/team.html
@@ -3,7 +3,7 @@ layout: team
 title: Team
 header: Team
 permalink: /about/team/
-body_class: about
+body_class: team
 ---
 <h1>Our Team</h1>
 <p class="intro"> Meet the core team that volunteer their time, expertise, and passion to build a thriving community.</p>
