--- a/events.html
+++ b/events.html
@@ -21,6 +21,7 @@ body_class: events
   <li> <b>Diaspora Engagement: </b> panels that delve into specific issues and topics </li>
   <li> <b>Newcomer workshops: </b> for recent immigrants settling into new lives </li>
   <li> <b>Social activities: </b> happy hours and outdoor activities</li>
+  <li> <b>Business Idea Competition: </b> provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community </li>    
   <li> <b>Annual Gala: </b> host 300+ professionals to raise funds in support of future programs</li>
   </ul>
     <p class="intro"> Here is upcoming and past events below.</p>
