Fixed spacing issues in title regions.

--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -6,10 +6,10 @@ permalink: /donate/
 body_class: donate
 ---
 <div class="prose bg-white">
-  <div class="container pad-by-50">
+  <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2">Support Our Work</h1>
+        <h1 class="page-title">Support Our Work</h1>
       </div>
       <div class="container">
        <p class="intro"> For the last 7 years, YEP has inspired, educated, and empowered the Ethiopian professional community to make a positive impact in the world. Your donation will go a long way to help us continue this important work. </p>  <p class="intro"> Support the movement today. </p>
@@ -52,7 +52,7 @@ body_class: donate
       </div>
       <div id="menu2" class="tab-pane fade">
         <div class="row margin-top-1">
-          <div class="content">
+          <div class="padding-1">
             <h3>Interested in Sponsoring YEP?</h3>
             <p class="intro"> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
             <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
