--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -35,7 +35,7 @@ images:
   <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2">Gallery</h1>
+        <h1 class="page-title">Gallery</h1>
       </div>
     </div>
     <div class="row card-grid">
