--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -5,7 +5,8 @@ header: Mission & Vision
 permalink: /about/mission/
 body_class: about
 ---
-<h1>Mission & Vision </h1>
+<h1 class="page-title">Mission & Vision</h1>
+
 <p class="intro"> "When spider webs unite, they can tie up a lion" - Ethiopian Proverb </p>
 <img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpeg">
 <h2>Our Mission</h2>
