--- a/_pages/team.html
+++ b/_pages/team.html
@@ -5,7 +5,8 @@ header: Team
 permalink: /about/team/
 body_class: team
 ---
-<h1>Our Team</h1>
+<h1 class="page-title">Our Team</h1>
+
 <p class="intro"> Meet the core team that volunteer their time, expertise, and passion to build a thriving community.</p>
 <div class="row card-grid">
   {% assign persons = site.data.team %}
