--- a/diaspora-corner.html
+++ b/diaspora-corner.html
@@ -6,10 +6,10 @@ permalink: /diaspora-corner/
 body_class: diaspora
 ---
 <div class="prose bg-white">
-  <div class="container pad-by-50">
+  <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2">Diaspora Corner</h1>
+        <h1 class="page-title">Diaspora Corner</h1>
       </div>
       <div class="container">
        <p class="intro"> Diaspora Corner is a blog where we highlight the accomplishments and perspectives of movers and shakers of the the diaspora. </p>  <p class="intro"> Read their stories and get your dose of inspiration. </p>
