--- a/_pages/history.html
+++ b/_pages/history.html
@@ -5,7 +5,8 @@ header: Our History
 permalink: /about/history/
 body_class: about
 ---
-<h1> Our Story </h1>
+<h1 class="page-title">Our Story</h1>
+
 <p class="intro"> Your Ethiopian Professionals (YEP) founders Mesfin Getaneh and Shimeles Mekonnen saw the incredible power of networking and community through the various events they attended. They were inspired by the abundance of connections and opportunities and sought a similar platform for fellow Ethiopian professionals. However, what they found were organizations designed for specific trades or interests. There remained a lack of a broad platform for young Ethiopians across all professions to connect, share experiences, learn from one another, and pursue community development initiatives.Inspired to fulfill this need, the pair began working to establish a foundation for what is now YEP in November 2010. </p>
 <p> <img src="/assets/images/programs/shim_mesfin.jpeg"> </p>
 <p class="intro"> During the early stages of planning, Lulit Tesfaye joined them, bringing firsthand experience in grassroots organizational development. YEP began by featuring inspirational speakers, hosting educational sessions, and providing networking opportunities.</p>
