--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ sections:
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2">About</h1>
+        <h1 class="page-title">About</h1>
         <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 1.5em;">
            Founded in 2010, YEP is a 501(c)(3), non-profit, non-political, and non-religious organization that
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
