--- a/events.html
+++ b/events.html
@@ -7,10 +7,10 @@ permalink: /events/
 body_class: events
 ---
 <div class="prose bg-white">
-  <div class="container pad-by-50">
+  <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2">Events</h1>
+        <h1 class="page-title">Events</h1>
        </div>
       <div class="container">
        <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
