--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ sections:
     <div class="row">
       <div class="col-sm-12 col-md-6">
           <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 1.5em;">
-           YEP members are a diverse community of professionals who represent an array of cultures, careers, experiences, and demographics. YEP has equal number of women and men members and serves professionals, students, recent arrivals, entrepreneurs, and the general Ethiopian community who strive for growth, excellence and success.
+          Our membership includes equal parts men and women, as well as a diverse range of professionals, students, recent arrivals, entrepreneurs, and those in the larger Ethiopian community who strive for growth, excellence, and success.
           </p>
         <a href="/about/mission" class="btn btn-donate"> Mission &amp; Vision</a>
         </div>
