--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -12,7 +12,8 @@ body_class: about
 <h2>Our Mission</h2>
 <p class="intro"> To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
 <h2>Our Vision</h2>
-<p class="intro"> The vision that informs YEP is a build a strong community that shares ideas, skills and resources to enrich lives.</p>
+<p class="intro"> YEP is driven by the vision to build a strong community that shares ideas, skills, and resources to enrich lives.</p>
+<p class="intro"> We also envision a grand future, complete with a YEP headquarters that can serve as a one-stop resource center for members and the community at large.</p> 
 <img title="Vision & Mission " alt="" src="/assets/images/misc/yep_headquarter.jpg">
 
 
