--- a/_pages/history.html
+++ b/_pages/history.html
@@ -11,7 +11,7 @@ body_class: about
 <p> <img src="/assets/images/programs/shim_mesfin.jpeg"> </p>
 <p class="intro"> During the early stages of planning, Lulit Tesfaye joined them, bringing firsthand experience in grassroots organizational development. YEP began by featuring inspirational speakers, hosting educational sessions, and providing networking opportunities.</p>
 <p> <img src="/assets/images/programs/leadership_team_2.jpg"> </p>
-<p class="intro"> To date, YEP has more than 20 team members and dedicated volunteers and contributed more than 10,000 hours to support YEP’s mission. </p>
+<p class="intro"> YEP is where it is today thanks to more than 20 dedicated team members and volunteers who have contributed more than 20,000 hours to support YEP's mission. </p>
  <p> <img src="/assets/images/programs/leadership_team_3.JPG"> </p>  
   <p class="intro"> YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community in the Washington Metropolitan area. As YEP grows, it continues to update its benefits and offerings to support members in the best ways possible. </p>
 <p> <img src="/assets/images/programs/history_2.jpeg"></p>
