--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -21,12 +21,11 @@ body_class: about
 <div class="container">
   <section class="prose bg-white">
     <div class="row">
-      <div class="col-sm-12 col-md-6">
+      <div class="col-sm-12 col-md-6 text-center margin-bottom-2">
         <img src="/assets/images/accomplishment.png">
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-6">
+
+      <div class="col-sm-12 col-md-6 text-center">
         <img src="/assets/images/accomplishments.jpg">
       </div>
     </div>
