--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@ body_class: events
           <li> <b>Business Idea Competition: </b> provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community </li>
           <li> <b>Annual Gala: </b> host 300+ professionals to raise funds in support of future programs</li>
         </ul>
-        <p class="intro" style="margin:2em 0 0 0"> Save your spot to our next event and browse past events to get an idea of our talks, workshops, social events, and much more. </p>
+        <p class="intro" style="margin:2em 0 0 0"> Save your spot to our next event, check out </b> <a href=https://yepnetwork.github.io/speakers/> the full list of previous speakers</a> </b>, and browse past events to get an idea of our talks, workshops, social events, and much more. </p>
       </div>
     </div>
   </div>
