--- a/_pages/team.html
+++ b/_pages/team.html
@@ -28,7 +28,7 @@ body_class: team
   </div>
   {% endfor %}
 </div>
-<h2>Volunteers</h2>
+<h2>Volunteers and Past Team Members</h2>
 <div class="row card-grid">
   {% assign persons = site.data.past-team-members %}
   {% for person in persons %}
