--- a/events.html
+++ b/events.html
@@ -15,7 +15,7 @@ body_class: events
       <div class="container">
         <p class="intro"> YEP events are designed to educate, entertain, and empower attendees through:</p>
         <ul>
-          <li> </b> <class="intro"><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> featuring an expert, leader, or influencer</li>
+          <li> </b> <class="intro"><b> <a href="{{ site.baseurl }}/speakers/">Speaker Series:</a> </b> featuring an expert, leader, or influencer</li>
           <li> <b>Career Series: </b> tips and resources for success in the workplace or in business </li>
           <li> <b>Personal Development: </b> soft skills for a better quality of life </li>
           <li> <b>Diaspora Engagement: </b> panels that delve into specific issues and topics </li>
@@ -24,7 +24,7 @@ body_class: events
           <li> <b>Business Idea Competition: </b> provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community </li>
           <li> <b>Annual Gala: </b> host 300+ professionals to raise funds in support of future programs</li>
         </ul>
-        <p class="intro" style="margin:2em 0 0 0"> Save your spot to our next event, check out </b> <a href=https://yepnetwork.github.io/speakers/> the full list of previous speakers</a></b>, and browse past events to get an idea of our talks, workshops, social events, and much more. </p>
+        <p class="intro" style="margin:2em 0 0 0"> Save your spot to our next event, check out </b> <a href="{{ site.baseurl }}/speakers/"> the full list of previous speakers</a></b>, and browse past events to get an idea of our talks, workshops, social events, and much more. </p>
       </div>
     </div>
   </div>
