Fixed page title.

--- a/_pages/business-idea.html
+++ b/_pages/business-idea.html
@@ -4,7 +4,8 @@ title: Business Idea Competition
 permalink: /business-idea/
 body_class: business idea
 ---
-<h1> YEP 2018 Business Idea Competition </h1>
+<h1 class="page-title">YEP 2018 Business Idea Competition</h1>
+
 <p class="intro">
 YEP is happy to announce its 2nd Business Idea Competition. YEP’s Business Idea Competition provides a showcase event and business competition for entrepreneurs/small businesses owned by Ethiopians and Ethiopian-Americans that are making a positive economic impact on their community.
 </p>
