Updated header class.

--- a/_pages/speakers.html
+++ b/_pages/speakers.html
@@ -4,7 +4,7 @@ title: Speakers
 permalink: /speakers/
 body_class: speakers
 ---
-<h1 class="margin-top-4">Past Speakers</h1>
+<h1 class="page-title">Past Speakers</h1>
 
 <p class="intro">
 Meet the extraordinary individuals who have spoken at our events throughout the years.
