Added a redirect for old team page.

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -4,6 +4,7 @@ title: Team
 header: Team
 permalink: /about/team/
 body_class: team
+redirect_from: /about-yep/112-yep-team.html
 ---
 <h1 class="page-title">Our Team</h1>
 
