--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,6 +4,7 @@ title: Support Our Work
 group: navigation
 permalink: /donate/
 body_class: donate
+redirect_from: /103-donation.html
 ---
 <div class="prose bg-white">
   <div class="container">
@@ -50,15 +51,15 @@ body_class: donate
             </div>
           </div>
         </div>
-	      <div id="menu2" class="tab-pane fade">
-	        <div class="row margin-top-1">
-	          <div class="padding-1">
-	            <h3>Interested in Sponsoring YEP?</h3>
-	            <p class="intro"> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
-	            <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
-	          </div>
-	        </div>
-	      </div>
+        <div id="menu2" class="tab-pane fade">
+          <div class="row margin-top-1">
+            <div class="padding-1">
+              <h3>Interested in Sponsoring YEP?</h3>
+              <p class="intro"> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+              <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
