--- a/404.html
+++ b/404.html
@@ -3,16 +3,16 @@ layout: default
 title: 404 Page Not Found
 permalink: /404.html
 ---
-
-<div class="container mtb">
+<div class="container">
   <div class="row">
-    <div class="col-lg-12 center-block">
-      <h4>Sorry for the inconvenience!</h4>
+    <div class="col-md-12">
+      <h1 class="page-title">Page not found</h1>
 
+      <p>Sorry for the inconvenience!</p>
       <p>
         We've redesigned our site and changed a lot of things. The page you're
         looking for might have moved. Feel free to look thru older snapshots of
-        this page at <a href="http://web.archive.org/web/*/yepnetwork.org">Archive.org</a>.
+        this page at <a href="http://web.archive.org/web/*/yepnetworks.org">Archive.org</a>.
         Or, you can report it to us at <a href="https://twitter.com/YEPnetworks">@YEPnetworks.</a>
       </p>
 
