Added redirect for about page.

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@ header: About Us
 group: navigation
 permalink: /about/
 body_class: about
+redirect_from: /about-yep.html
 sections:
   - title: YEPs Journey
     head: Learn More
