--- a/_pages/ideas-ethiopia.html
+++ b/_pages/ideas-ethiopia.html
@@ -1,9 +1,9 @@
 ---
-layout: default
-title: Gallery
-permalink: /forms/
-body_class: donate
-
+layout: page
+title: IDEAS worth Pursuing For Ethiopia 
+permalink: /ideas-ethiopia/
+body_class: Forms
 ---
+<h1 class="page-title">YEP 2018 Business Idea Competition</h1>
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfhBT9HtObdXSEXr6IH9C3kAowppivBLAoHH8OpBiBWuC9w7g/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
