--- a/_pages/join.html
+++ b/_pages/join.html
@@ -1,9 +1,11 @@
 ---
 layout: default
 title: Member
+group: navigation
 permalink: /join/
-body_class: donate
+body_class: join
 ---
+
  <div class="container">
   <div class="row">
     <div class="col-sm-12">
