--- a/_pages/join.html
+++ b/_pages/join.html
@@ -1,11 +1,10 @@
 ---
-layout: default
+layout: landing
 title: Member
 group: navigation
 permalink: /join/
 body_class: join
 ---
-
  <div class="container">
   <div class="row">
     <div class="col-sm-12">
