--- a/_pages/join.html
+++ b/_pages/join.html
@@ -18,7 +18,7 @@ body_class: join
       <h3> Your membership helps YEP </h3>
       <p> 1. Continue its role as the gathering point for networking and professional development. </p>
       <p> 2. Understand the key gaps in our community and the steps that can be taken to address them.</p>
-      <h3> Your membership helps YEP </h3>
+      <h3> Your membership helps You </h3>
       <p> 1. Engage in initiatives tailored to your expertise that will directly impact the community  </p>
       <p> 2. Grow in your career through mentoring, professional development sessions and networking events. </p>
       <p> 3. Attend our annual gala that brings together over professionals and community members.</p>
