--- a/_pages/join.html
+++ b/_pages/join.html
@@ -9,8 +9,7 @@ body_class: join
   <div class="row">
     <div class="col-sm-12">
       <h1>Join YEP Today!</h1>
-       <p>YEP members are diverse professionals from all walks of life who are striving for growth, excellence, and success in their professional and social lives.   Whether you are looking to network with local peers, trying to find new job/opportunities/business partners, mentor others, volunteer at local events or just looking for information, YEP is the place for you.</p>
-       <p>Dedicated to mobilizing our members to develop innovative ways of improving our community </p>
+       <p>YEP members are diverse professionals from all walks of life who are striving for growth, excellence, and success in their professional and social lives. Whether you are looking to network with local peers, trying to find new job/opportunities/business partners, mentor others, volunteer at local events or just looking for information, YEP is dedicated to mobilizing our members to develop innovative ways of improving our community </p>
       <h2> Why join YEP? </h2> 
       <li> YEP aims to serve as a nexus to strengthen our professional and social link within the Ethiopian community.</li>
       <li> Your membership will give you countless opportunities to engage with the community and network with fellow members.</li>
