--- a/_pages/join.html
+++ b/_pages/join.html
@@ -4,6 +4,7 @@ title: Member
 group: navigation
 permalink: /join/
 body_class: join
+redirect_from: /103-join.html
 ---
  <div class="container">
   <div class="row">
