--- a/_pages/join.html
+++ b/_pages/join.html
@@ -3,7 +3,7 @@ layout: landing
 title: Member
 group: navigation
 permalink: /join/
-body_class: join
+body_class: donate
 redirect_from: /103-join.html
 ---
  <div class="container">
